# agents-report

./: .envrc  .gitignore  Dockerfile  README.en.md  README.md  analyzeagt  dashboard-uv  docker-compose.yml  getagt  llms.txt  pyproject.toml
.agents/skills/source-command-analyzeagt/: SKILL.md
.agents/skills/source-command-getagt/: SKILL.md
.agents/skills/source-command-setup-schedule/: SKILL.md
.agents/skills/source-command-teardown-schedule/: SKILL.md
.claude/commands/: analyzeagt.md  getagt.md  setup-schedule.md  teardown-schedule.md
dashboard/: cache.py  dashboard.html  gitlab_client.py  requirements.txt  server.py
example/: members.json
scripts/: analyze.py  collect_codex.py  collect_cursor.py  collect_hermes.py  collect_openclaw.py  collect_opencode.py  collect_trae.py  collect_trae_cn.py  gen_report_from_sessions.py  generate_insights_from_stats.py  getagt.py  i18n.py  merge_reports.py  period_utils.py  schedule_setup.py  schedule_teardown.py
