[project]
name = "agents-report"
version = "0.1.0"
description = "Cross-agent usage analytics: collect, merge, and report data from Claude Code, Codex CLI, OpenCode, Cursor, Trae, OpenClaw, and Hermes — seven AI coding agents in one unified dashboard."
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.104.1",
    "flask>=3.0",
    "openai>=2.38.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
getagt = "scripts.getagt:main"
analyzeagt = "scripts.analyze:main"

[project.urls]
Homepage = "https://github.com/heroims/agents-report"
Repository = "https://github.com/heroims/agents-report.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
